infrastructure/kube-prometheus-stack/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway-system
  hostnames:
    - grafana.larswenda.org
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway-system
  hostnames:
    - prometheus.larswenda.org
  rules:
    - backendRefs:
        - name: prometheus-operated
          port: 9090
